--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,4 +1,3 @@
-// MAIN HANDLEBARS
 
 <!DOCTYPE html>
 <html lang="en">
@@ -7,15 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="/styles/style.css">
+  <!-- <link rel="stylesheet" href="/styles/style.css"> -->
 </head>
 
 <body>
 
-  <h1>Digital Zoo!</h1>
+  <h1>Garden of Good and Evil!</h1>
 
   {{{body}}}
-              
+
   </body>
-              
+
 </html>
