added some handlebars stuff

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,6 +11,38 @@
 
     <input type='text' name='food' value='favorite-food'>
 
-    <input type='select'
+    <select> 
+      <option>Red</option>
+      <option>Blue</option>
+      <option>Yellow</option>
+      <option>Chartreuse</option>
+    </select>
+
+    <input id="insanity-level" type="range" min="1" max="10">
+
   </form>
+
+  <div id = "list-container">
+    <div id = "likes">
+      <ul>
+        <li>Favorite color</li>
+        <li>Favorite food</li>
+        <li>Smooth jazz</li>
+        <li>Roket pops</li>
+        <li>Klondike bars</li>
+      </ul>
+    </div>
+    <div id = "dislikes">
+      <ul>
+        <li>Murder</li>
+        <li>Nascar</li>
+        <li>Voldemort</li>
+        <li>Volvos</li>
+        <li>Flatulence</li>
+      </ul>
+    </div>
+  </div>
+  
+  
+
 </div>
