--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,7 +11,7 @@
 
     <input type='text' name='food' value='favorite-food'>
 
-    <select> 
+    <select>
       <option>Red</option>
       <option>Blue</option>
       <option>Yellow</option>
@@ -42,7 +42,99 @@
       </ul>
     </div>
   </div>
+
+  <article id='biography'>
+    <h2>Your Biography</h2>
+    <p id='good'>Born in a cloud on Christmas Eve, you decended to Earth on
+      the wings of a ladybug, to start a renewable energy company, and you
+      always use prettier for code organization.</p>
+
+    <p id='bad'>Born from a canned bean dinner and lack of pepto bismo, you
+      torment dreams of the elderly, and janitors everywhere. You use eclipse
+      as your text editor, and write 20 line comments. You also troll the aspca's
+     youTube page, daily.</p>
+   </article>
+
+   <article>
+
+     <header>
+          <h1>Johann Baptista | Software Engineer</h1>
+          <address>
+            <p>1601 Colusa Avenue</p>
+            <p>Davis, CA, 95616</p>
+            <p><a href = "mailto:baptistajohann@gmail.com">baptistajohann@gmail.com</a></p>
+            <hr>
+          </address>
+        </header>
+        <section>
+          <h2>Goals</h2>
+          <p>To obtain employment at a startup as a full-stack software engineer</p>
+        </section>
+        <section>
+          <h2>Skills</h2>
+            <ol>
+              <li>Holds doors open</li>
+              <li>Keeps up with Viking assessments</li>
+              <li>Never asks to borrow a toothbrush</li>
+              <li>Swimmer: Volunteer Lifeguard</li>
+        </section>
+        <section>
+          <h2>Work Experience</h2>
+          <table>
+            <thead>
+              <tr>
+                <th>Time</th>
+                <th>Company</th>
+                <th>Location</th>
+                <th>Position</th>
+                <th>Responsibilities</th>
+                <th>Contact Info</th>
+              </tr>
+            </thead>
+            <tr>
+              <td>2014-2016</td>
+              <td>Willamette University</td>
+              <td>Salem, OR</td>
+              <td>Private Tutor</td>
+              <td>Tutor students in math and statistics</td>
+              <td>Matt Barrero 503-XXX-XXXX</td>
+            <tr>
+            <tr>
+              <td>2016-2017</td>
+              <td>Willamette University</td>
+              <td>Salem, OR</td>
+              <td>QUAD Assistant</td>
+              <td>Drop-in tutoring in math and statistics</td>
+              <td>Jim Friedrick 503-XXX-XXXX</td>
+            <tr>
+          </table>
+        </section>
+        <section>
   
-  
+        </section>
+        <section>
+          <h2>Hobbies and Interests</h2>
+          <ol>
+            <li>Data analysis</li>
+            <li>Irish flute</li>
+            <li>Long coats</li>
+          </ol>
+        </section>
+        <section>
+          <h2>References</h2>
+          <p>Available upon request</p>
+        </section>
+        <footer>
+           <address>
+            <p>1601 Colusa Avenue</p>
+            <p>Davis, CA, 95616</p>
+            <p><a href = "mailto:baptistajohann@gmail.com">baptistajohann@gmail.com</a></p>
+            <hr>
+          </address>
+        </footer>
+
+   </article>
+
+
 
 </div>
