--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,9 +18,11 @@
       <option>Chartreuse</option>
     </select>
 
-    <input id="insanity-level" type="range" min="1" max="10">
+    <input id="insanity-level" name="insanity-level" type="range" min="1" max="10">
 
   </form>
+
+  <div id="main-hidden">
 
   <div id = "list-container">
     <div id = "likes">
@@ -135,6 +137,6 @@
 
    </article>
 
-
+   </div>
 
 </div>
