--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,11 @@
-* {
-  background-color: {
-     {
-    }
-  }
+.good {
+
+  background-color:yellow;
+
+}
+
+.evil {
+
+  background-color:purple;
+
 }
