--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,18 @@
+body div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#list-container {
+  display: flex;
+  flex-direction: row;
+}
+
+#radio {
+}
+
 .good {
   background-color: yellow;
   font-family: ;
@@ -16,5 +31,6 @@
   font-family: fantasy;
 }
 
-form {
+article {
+  margin: 50px;
 }
